--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,10 +8,12 @@ on:
       - main
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client   # ✅ all run steps happen in /client 
     steps:
       - uses: actions/checkout@v4
-        working_directory: ./client
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
