--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,3 +21,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MOTO_TRACKER_57F25 }}
           channelId: live
           projectId: moto-tracker-57f25
+          entryPoint: ./client
