--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -43,10 +43,10 @@ jobs:
 
       # 3. Installs project dependencies using npm ci (clean install)
       - name: Install dependencies
-        run: npm ci
+        run: cd client && npm ci
 
       # 4. Runs Jest tests
       - name: Run tests with coverage
         # The 'npm test' command is standard for running Jest in React projects
-        run: npm run coverage
+        run: cd client && npm run coverage
 
