--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       # You can test against multiple Node.js versions
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20, 22]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
