--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
