--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
+    "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
