--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -84,3 +84,5 @@ jobs:
         # Only works if you set `reportOnFailure: true` in your vite config as specified above
         if: always() 
         uses:  davelosert/vitest-coverage-report-action@v2
+        with:
+          working-directory: ./client
