--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -56,6 +56,8 @@ jobs:
   coverage:
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     defaults:
       run:
         working-directory: ./client 
