--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.33.0",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
