--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -66,3 +66,10 @@ jobs:
         run: |
           pipenv run pytest
 
+      # 7. Run tests with coverage and comment on PR
+      - name: Build coverage file
+        run: |
+          pytest --cache-clear --cov=app test/ > pytest-coverage.txt
+      - name: Comment coverage
+        uses: coroo/pytest-coverage-commentator@v1.0.2
+
