ci-cd: add coverage on PRs to run on pipenv

--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -69,3 +69,5 @@ jobs:
 
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
+        with:
+                pytest-coverage: ./server/pytest-coverage.txt
