--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -18,6 +18,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     defaults:
       run:
         working-directory: ./server 
@@ -70,4 +72,4 @@ jobs:
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
         with:
-          pytest-coverage: coverage.xml
+          pytest-coverage: ./server/coverage.xml
