--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -10,6 +10,7 @@ ENABLE_LINTERS:
   - PYTHON_FLAKE8
   - PYTHON_BLACK
   - JAVASCRIPT_ES
+PYTHON_FLAKE8_ARGUMENTS: "--max-line-length=88"
   - JAVASCRIPT_PRETTIER
   - MARKDOWN_MARKDOWNLINT
   - YAML_PRETTIER
