fix: add script file for git commit

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,9 +6,12 @@ name = "pypi"
 [packages]
 flask = "*"
 gunicorn = "*"
+black = "*"
 
 [dev-packages]
 pytest = "*"
+black = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.12"
