--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,12 @@
     "@vitejs/plugin-react": "^5.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "jsdom": "^24.0.0",
+    "typescript-eslint": "^8.44.0",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
   }
