--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
