73 feature action button component (#74)
* feat: add custom action button with styling

* test: add full action button test

* add: apiKey to CI build

* ci-cd: use env variable

* test: update test details to match classes

* button: add resuable dashboard button using bootstrap

* ci-cd: add code coverage report to pull requests

* fix: AI comments

* fix: AI comments

* task: add new actions tool for coverage

* chore: replace the client working directory on CI

* fix: client CI

* fix: client CI

* task: add write requests to PR for vitest on CI

* task: add write requests to PR for vitest on CI

* tests: add coverage by istanbul

* fix: update client folder

* tests: add tests for dummy UI

* feat: structure app

* test: reorganize test for app button

* feat: update package-lock.json

* feat: update package-lock

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,6 +19,8 @@ jobs:
     defaults:
       run:
         working-directory: ./client   # ✅ all run steps happen in /client
+    env:
+      VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
     steps:
       - uses: actions/checkout@v4
 
