--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "jsdom": "^24.0.0", 
+    "jsdom": "^24.0.0",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
   }
