--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -14,8 +14,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "flask-tests"
+  flask-tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     permissions:
@@ -69,6 +69,7 @@ jobs:
       - name: Run tests with coverage
         run: pipenv run pytest --cov=. tests/ > pytest-coverage.txt
 
+      # 8. Comment coverage report on PR, only for changed files
       - name: Coverage comment (changed files only)
         uses: MishaKav/pytest-coverage-comment@main
         with:
