docs: add staging URLs

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,5 +1,6 @@
 EXCLUDED_DIRECTORIES:
-  - .github/workflows
+  - ./node_modules
+  - ./.github/workflows
 
 DEFAULT_BRANCH: develop
 APPLY_FIXES: all
