docs: add staging URLs (#96)
* docs: add staging URLs

* docs: add staging URLs

* lint: all files

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,12 +1,13 @@
 EXCLUDED_DIRECTORIES:
-  - .github/workflows
+  - ./node_modules
+  - ./.github/workflows
 
 DEFAULT_BRANCH: develop
 APPLY_FIXES: all
 IGNORE_GITIGNORED_FILES: true
 
 DISABLE_LINTERS:
-  - GIT_GIT_DIFF     # prevents it from touching git workflow files
+  - GIT_GIT_DIFF # prevents it from touching git workflow files
   - SPELL_CSPELL
   - SPELL_MISSPELL
 
