--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -26,6 +28,7 @@
     "@eslint/js": "^9.33.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
