--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "*"
 flask = "*"
 flask-sqlalchemy = "*"
 werkzeug = "*"
 python-dotenv = "*"
 email-validator = "*"
+flask-migrate = "*"
+gunicorn = "==22.0.0"
 
 [dev-packages]
+pytest = "*"
 flask = "==3.0.3"
 gunicorn = "==22.0.0"
 flask-migrate = "*"
