--- a/server/Pipfile
+++ b/server/Pipfile
@@ -4,23 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-sqlalchemy = "*"
-werkzeug = "*"
-python-dotenv = "*"
-email-validator = "*"
-flask-migrate = "*"
+flask = "==3.1.2"
+flask-sqlalchemy = "==3.1.1"
+werkzeug = "==2.1.2"
+python-dotenv = "==0.20.0"
+email-validator = "==1.1.3"
+flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
+phonenumbers = "==9.0.14"
 
 [dev-packages]
 flask = "==3.0.3"
 gunicorn = "==22.0.0"
-flask-migrate = "*"
-email-validator = "*"
+flask-migrate = "==3.1.0"
+email-validator = "==1.1.3"
 pytest = "==8.2.2"
 black = "==24.4.2"
 flake8 = "==7.1.0"
-pytest-cov = "*"
+pytest-cov = "==3.0.0"
 
 [requires]
 python_version = "3.12"
