made more changes based on pr reviews

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -17,7 +17,7 @@ phonenumbers = "==9.0.14"
 pytest = "==8.2.2"
 black = "==24.4.2"
 flake8 = "==7.1.0"
-pytest-cov = "==3.0.0"
+pytest-cov = ">=4.1,<6"
 
 [requires]
 python_version = "3.12"
