--- a/server/Pipfile
+++ b/server/Pipfile
@@ -12,6 +12,7 @@ email-validator = "==1.1.3"
 flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
 phonenumbers = "==9.0.14"
+psycopg2-binary = "*"
 
 [dev-packages]
 pytest = "==8.2.2"
