--- a/server/Pipfile
+++ b/server/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==3.1.2"
+flask = "*"
 flask-sqlalchemy = "==3.1.1"
 werkzeug = "==3.1.3"
 python-dotenv = "==0.20.0"
