--- a/server/Pipfile
+++ b/server/Pipfile
@@ -18,7 +18,7 @@ psycopg2-binary = "*"
 pytest = "==8.2.2"
 black = "==24.4.2"
 flake8 = "==7.1.0"
-pytest-cov = ">=4.1,<6"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.12"
