--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       # You can test against multiple Python versions
       matrix:
-        python-version: ["3.10", "3.12"]
+        python-version: ["3.12"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
