--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -37,7 +37,8 @@ jobs:
       pull-requests: write
     defaults:
       run:
-        working-directory: ./server
+        working-directory: ./serverenv:
+          POSTGRES_PASSWORD: postgres
     strategy:
       # You can test against multiple Python versions
       matrix:
@@ -86,7 +87,7 @@ jobs:
         env:
           # Provide the database URI to the Flask app.
           # The host is 'localhost' and the port is dynamically assigned by the runner.
-          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:${{ job.services.postgres.ports['5432'] }}/testdb
+          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
 
       # 8. Comment coverage report on PR, only for changed files
       - name: Coverage comment (changed files only)
