--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -21,7 +21,7 @@ jobs:
     # Add a PostgreSQL service container to run tests against.
     services:
       postgres:
-        image: postgres:13
+        image: postgres:12
         # Environment variables for the postgres container.
         env:
           POSTGRES_USER: testuser
@@ -86,7 +86,7 @@ jobs:
         env:
           # Provide the database URI to the Flask app.
           # The host is 'localhost' and the port is dynamically assigned by the runner.
-          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:${{ job.services.postgres.ports['5432'] }}/testdb
+          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
 
       # 8. Comment coverage report on PR, only for changed files
       - name: Coverage comment (changed files only)
