--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 flask = "==3.0.3"
 gunicorn = "==22.0.0"
+flask-cors = "*"
 
 [dev-packages]
 pytest = "==8.2.2"
@@ -13,8 +14,5 @@ black = "==24.4.2"
 flake8 = "==7.1.0"
 pytest-cov = "*"
 
-
 [requires]
 python_version = "3.12"
-
-
