--- a/server/Pipfile
+++ b/server/Pipfile
@@ -14,6 +14,8 @@ gunicorn = "==22.0.0"
 flask-cors = "*"
 phonenumbers = "==9.0.14"
 psycopg2-binary = "*"
+pytest = "*"
+pymysql = "*"
 
 [dev-packages]
 pytest = "==8.2.2"
@@ -21,8 +23,5 @@ black = "==24.4.2"
 flake8 = "==7.1.0"
 pytest-cov = "*"
 
-
 [requires]
 python_version = "3.12"
-
-
