--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -87,6 +87,7 @@ jobs:
           # Provide the database URI to the Flask app.
           # The host is 'localhost' and the port is dynamically assigned by the runner.
           FLASK_TEST_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
+      -   FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
 
       # 8. Comment coverage report on PR, only for changed files
       - name: Coverage comment (changed files only)
