--- a/server/Pipfile
+++ b/server/Pipfile
@@ -17,10 +17,8 @@ psycopg2-binary = "*"
 [dev-packages]
 pytest = "==8.2.2"
 black = "==24.4.2"
-flake8 = "==7.1.0"
 pytest-cov = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.12"
-
-
