--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "react-icons": "^5.5.0",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
