--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,6 +13,7 @@ flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
 phonenumbers = "==9.0.14"
 psycopg2-binary = "*"
+flask-cors = "*"
 
 [dev-packages]
 pytest = "==8.2.2"
