CI: fix failing test

--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -90,6 +90,8 @@ jobs:
           # The host is 'localhost' and the port is dynamically assigned by the runner.
           FLASK_TEST_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
           FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
+          FLASK_CORS_ALLOWED_ORIGINS: "*"
+          FLASK_ENV: testing
 
       # 8. Comment coverage report on PR, only for changed files
       - name: Coverage comment (changed files only)
