--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -22,6 +22,8 @@ jobs:
     services:
       postgres:
         image: postgres:12
+        ports:
+          - 5432/tcp
         # Environment variables for the postgres container.
         env:
           POSTGRES_USER: testuser
@@ -88,8 +90,8 @@ jobs:
         env:
           # Provide the database URI to the Flask app.
           # The host is 'localhost' and the port is dynamically assigned by the runner.
-          FLASK_TEST_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
-          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:5432/testdb
+          FLASK_TEST_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:${{ job.services.postgres.ports['5432'] }}/testdb
+          FLASK_SQLALCHEMY_DATABASE_URI: postgresql://testuser:testpassword@localhost:${{ job.services.postgres.ports['5432'] }}/testdb
           FLASK_CORS_ALLOWED_ORIGINS: "*"
           FLASK_ENV: testing
 
