--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,9 +11,9 @@ python-dotenv = "==0.20.0"
 email-validator = "==1.1.3"
 flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
-flask-cors = "*"
 phonenumbers = "==9.0.14"
 psycopg2-binary = "*"
+flask_restful = "*"
 flask-cors = "*"
 
 [dev-packages]
