--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
         working-directory: ./client # ✅ all run steps happen in /client
     env:
       VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
-      VITE_API_BASE_URL: ${{ secrets.VITE_API_STAGING_BASE_URL }}
+      VITE_SERVER_BASE_URL: ${{ secrets.VITE_API_STAGING_BASE_URL }}
     steps:
       - uses: actions/checkout@v4
       - run: npm ci && npm run build
