--- a/server/Pipfile
+++ b/server/Pipfile
@@ -4,17 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==3.1.2"
-flask-sqlalchemy = "==3.1.1"
 werkzeug = "==3.1.3"
 python-dotenv = "==0.20.0"
-email-validator = "==1.1.3"
 flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
 phonenumbers = "==9.0.14"
 psycopg2-binary = "*"
 flask_restful = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+flask-restful = "*"
+flask-jwt-extended = "*"
 flask-cors = "*"
+email-validator = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 pytest = "==8.2.2"
