--- a/server/Pipfile
+++ b/server/Pipfile
@@ -9,21 +9,20 @@ python-dotenv = "==0.20.0"
 flask-migrate = "==3.1.0"
 gunicorn = "==22.0.0"
 phonenumbers = "==9.0.14"
-psycopg2-binary = "*"
-flask_restful = "*"
-flask = "*"
-flask-sqlalchemy = "*"
-flask-restful = "*"
-flask-jwt-extended = "*"
-flask-cors = "*"
-email-validator = "*"
-sqlalchemy = "*"
+psycopg2-binary = "==2.9.10"
+flask = "==3.1.2"
+flask-sqlalchemy = "==3.1.1"
+flask-restful = "==0.3.10"
+flask-jwt-extended = "==4.7.1"
+flask-cors = "==6.0.1"
+email-validator = "==2.3.0"
+
 
 [dev-packages]
 pytest = "==8.2.2"
 black = "==24.4.2"
-pytest-cov = "*"
-flake8 = "*"
+pytest-cov = "==7.0.0"
+flake8 = "==7.3.0"
 
 [requires]
 python_version = "3.12"
