--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "toastify": "^2.0.1"
