chore: cd to server in validate-contracts workflow

--- a/.github/workflows/validate-contracts.yml
+++ b/.github/workflows/validate-contracts.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pipenv
+          cd server
           pipenv install --deploy --ignore-pipfile
 
       # Step 4: Run contract validation
