--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-international-phone": "^4.6.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "toastify": "^2.0.1"
