--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "msw": "^2.11.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "jest": "^30.1.3"
   }
 }
