--- a/client/package.json
+++ b/client/package.json
@@ -47,12 +47,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
     "jsdom": "^24.0.0",
     "msw": "^2.11.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "jest": "^30.1.3"
+    "vitest": "^3.2.4"
   }
 }
