--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@mui/icons-material": "^7.3.2",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "draft-js": "^0.11.7",
     "firebase": "^12.2.1",
+    "is-hotkey": "^0.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
@@ -27,6 +30,9 @@
     "react-international-phone": "^4.6.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
@@ -47,12 +53,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
     "jsdom": "^24.0.0",
     "msw": "^2.11.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "jest": "^30.1.3"
+    "vitest": "^3.2.4"
   }
 }
