--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.2.1",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
@@ -47,12 +48,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.3",
     "msw": "^2.11.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "jest": "^30.1.3"
+    "vitest": "^3.2.4"
   }
 }
