204 admin create send newsletter   fe (#208)
* fix: removed the outlet and footer wrapper (#197)

* Hotfix/v0.0.7 alpha02 (#199)

* changes to Footer,app, footer.css & footerWrapper to make it stick to the bottom

* modified by lint; app & footer

* changes to footer.css to modify bottom links

* conflicts resolved in app.jsx

* feature: blog section UI

* fix lint issues

* feat: add blog/newsletter functionality

* feat: add comprehensive tests

* feat: add comprehensive tests

* feat: add comprehensive tests

* feat: add comprehensive tests

* Update client/src/components/Login.jsx

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fix: codereabbit commits

---------

Co-authored-by: Edith Agai <email.02yt@gmail.com>
Co-authored-by: Kimanthif <164173602+Kimanthif@users.noreply.github.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@mui/icons-material": "^7.3.2",
@@ -19,6 +20,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.2.1",
+    "is-hotkey": "^0.2.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
@@ -28,6 +30,9 @@
     "react-international-phone": "^4.6.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
