--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.2.1",
     "is-hotkey": "^0.2.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
