--- a/.github/workflows/keep-alive.yaml
+++ b/.github/workflows/keep-alive.yaml
@@ -3,7 +3,7 @@ name: Keep Render Service Awake
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/10 * * * *"
   workflow_dispatch:
   push:
     branches:
@@ -18,4 +18,4 @@ jobs:
 
       - name: Ping Render backend
         run: |
-          curl -s -I ${{ secrets.RENDER_URL }}
+          curl -m 8 -s ${{ secrets.RENDER_URL }} > /dev/null 2>&1
